--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -9,7 +9,7 @@
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="./styles/login.css">
+
 </head>
 
 
@@ -29,16 +29,22 @@
 
                         <form id="loginForm" method="post">
                             <div class="mb-3">
-                                <label for="email" class="form-label">E-mail</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="seu@email.com"
-                                       autocomplete="email">
+                                <label for="loginCPF" class="form-label">CPF</label>
+                                <input type="text" class="form-control" id="loginCPF" placeholder="XXX.XXX.XXX-XX"
+                                       maxlength="11">
+                            </div>
+                            <div class="w-100">
+                                <span id="loginAlerta" role="alert"></span>
                             </div>
 
                             <div class="mb-3">
                                 <label for="senha" class="form-label">Senha</label>
                                 <div class="input-group">
-                                    <input type="password" class="form-control" id="senha" name="senha" placeholder="Sua senha" autocomplete="current-password">
-                                    <button type="button" class="btn-toggle-senha position-absolute top-50 end-0 translate-middle-y me-2" id="toggleSenha">
+                                    <input type="password" class="form-control" id="senha" name="senha"
+                                           placeholder="Sua senha" autocomplete="current-password">
+                                    <button type="button"
+                                            class="btn-toggle-senha position-absolute top-50 end-0 translate-middle-y me-2"
+                                            id="toggleSenha">
                                         <i class="bi bi-eye" id="iconSenha"></i>
                                     </button>
                                 </div>
@@ -74,7 +80,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-<script src="/js/login.js"></script>
+<script src="./scripts/utils.js" defer></script>
+<script src="./scripts/alertas.js" defer></script>
+<script src="./scripts/validacao.js" defer></script>
+<script src="./scripts/login.js" defer></script>
 
 </body>
 
