--- a/src/main/resources/formulario.html
+++ b/src/main/resources/formulario.html
@@ -15,7 +15,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="login.html">FGTAS</a>
+        <a class="navbar-brand fw-bold" href="index.html">FGTAS</a>
         <div class="navbar-nav ms-auto">
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -27,7 +27,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="login.html"><i
+                    <li><a class="dropdown-item" href="index.html"><i
                             class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
                 </ul>
             </div>
@@ -90,10 +90,9 @@
                     <div class="card-body">
 
                         <form class="row g-3 needs-validation" method="post" id="formularioAtend">
-                            <!-- Nome do atendente (readonly) -->
                             <div class="col-md-4">
-                                <label for="atendenteNome" class="form-label">Nome do atendente</label>
-                                <input type="text" class="form-control" id="atendenteNome"
+                                <label for="nomeAtendente" class="form-label">Nome do atendente</label>
+                                <input type="text" class="form-control" id="nomeAtendente"
                                        name="identificacaoAtendente" required>
                             </div>
 
@@ -193,8 +192,9 @@
                             </div>
                         </form>
                     </div>
+                    <div id="dadosAtendimento" class="col-12">
 
-
+                    </div>
                 </div>
 
             </div>
@@ -204,11 +204,10 @@
 </div>
 
 
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+<script src="./scripts/classes/Atendimento.js" defer></script>
 <script src="./scripts/utils.js" defer></script>
 <script src="./scripts/alertas.js" defer></script>
 <script src="./scripts/validacao.js" defer></script>
